--- a/WeeklyPlanner/MainWindow.xaml
+++ b/WeeklyPlanner/MainWindow.xaml
@@ -83,7 +83,7 @@
                 <ColumnDefinition Width="8*"/>
                 <ColumnDefinition Width="5*"/>
             </Grid.ColumnDefinitions>
-            <Label Content="THINGS TO DO" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Height="31" Width="123"/>
+            <Label Content="THINGS TO DO" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Height="31" Width="123" MouseDown="Label_MouseDown"/>
             <GridSplitter Margin="0,40,5,10" Background="Black" Width="1"/>
             <Label Content="MORE THINGS TO DO" HorizontalAlignment="Left" Margin="10,46,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Grid.Column="1" Height="31" Width="174"/>
             <Border BorderBrush="Black" BorderThickness="1" Grid.Column="1" Height="76" Margin="0,-35,0,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="174" MouseDown="Legend_MouseDown">
