--- a/WeeklyPlanner/App.xaml
+++ b/WeeklyPlanner/App.xaml
@@ -5,5 +5,6 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <Style BasedOn="{StaticResource {x:Type ToggleButton}}" TargetType="RadioButton"/>
+        <local:InverseBooleanConverter x:Key="InverseBooleanConverter" />
     </Application.Resources>
 </Application>
