--- a/WeeklyPlanner/MainWindow.xaml
+++ b/WeeklyPlanner/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WeeklyPlanner"
+        xmlns:dd="urn:gong-wpf-dragdrop"
         mc:Ignorable="d"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
         Title="MainWindow" Height="1087" Width="824">
@@ -89,15 +90,14 @@
             <Border BorderBrush="Black" BorderThickness="1" Grid.Column="1" Height="76" Margin="0,-35,0,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="174" MouseDown="Legend_MouseDown">
                 <Grid>
                     <Label Content="LEGEND" VerticalAlignment="Top" Margin="58,0" FontWeight="Bold"/>
-                    <!--<ListView Margin="0,20,0,0" BorderBrush="{x:Null}">-->
-                    <UniformGrid x:Name="LegendListBox" Columns="2" Margin="10,22,10,7">
+
+                    <UniformGrid x:Name="LegendListBox" Columns="2" Margin="10,22,10,7" dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True">
                         <ListBoxItem Background="{x:Null}" Content="■ EE 16B" Foreground="Red" FontSize="10"/>
                         <ListBoxItem Content="■ CS 70" Foreground="DodgerBlue" FontSize="10"/>
                         <ListBoxItem Content="■ DATA 100" Foreground="Green" FontSize="10"/>
                         <ListBoxItem Content="■ L&amp;S 25" Foreground="Purple" FontSize="10"/>
                         <ListBoxItem Content="■ OTHER" Foreground="Navy" FontSize="10"/>
                     </UniformGrid>
-                    <!--</ListView>-->
                 </Grid>
             </Border>
             <ListBox x:Name="ToDoList" Margin="0,41,11,0" BorderBrush="{x:Null}" FontSize="16">
