--- a/WeeklyPlanner/EventDialog.xaml
+++ b/WeeklyPlanner/EventDialog.xaml
@@ -9,21 +9,21 @@
         xmlns:c="clr-namespace:WeeklyPlanner.Controls"
         mc:Ignorable="d"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
-        Title="EventDialog" Height="580" MinHeight="580" MaxHeight="580" Width="500" MinWidth="500">
+        Title="Create Event" Height="580" MinHeight="580" MaxHeight="580" Width="500" MinWidth="500">
     <Grid>
         <Label Content="Create Event" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold"/>
         <GroupBox Header="General" Height="98" Margin="10,52,10,0" VerticalAlignment="Top">
             <Grid>
                 <Label Content="Legend Item" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                <ComboBox x:Name="EventLegendItemComboBox" Margin="91,10,10,0" VerticalAlignment="Top" Height="26" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}" ItemsSource="{Binding LegendItemDisplays}" VerticalContentAlignment="Center"/>
+                <ComboBox x:Name="EventLegendItemComboBox" Margin="91,10,10,0" VerticalAlignment="Top" Height="26" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}" ItemsSource="{Binding LegendItemDisplaysWithNone}" SelectedIndex="0" VerticalContentAlignment="Center" SelectedValuePath="Tag"/>
                 <Label Content="Title" HorizontalAlignment="Left" Margin="54,41,0,0" VerticalAlignment="Top"/>
                 <c:FormattedWatermarkTextBox x:Name="EventTitleTextBox" Margin="91,41,10,8"></c:FormattedWatermarkTextBox>
             </Grid>
         </GroupBox>
-        <Button x:Name="SaveButton" Content="Save" Margin="0,0,10,8" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Bottom" IsDefault="True"/>
+        <Button x:Name="SaveButton" Content="Save" Margin="0,0,10,8" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Bottom" IsDefault="True" Click="SaveButton_Click"/>
         <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Right" Margin="0,0,90,8" VerticalAlignment="Bottom" Width="75" IsCancel="True"/>
         <TabControl Margin="10,150,10,35">
-            <TabItem Header="Checklist Entry">
+            <TabItem Header="Checklist Entry" Name="TestThing">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="1*"/>
@@ -92,14 +92,14 @@
                     <c:FormattedWatermarkTextBox Watermark="{Binding ElementName=EventTitleTextBox, Path=Text}" x:Name="PlannerDay7TitleTextBox" Grid.Column="2" Margin="7,5" Grid.Row="7" IsEnabled="{Binding ElementName=PlannerDay7Button, Path=IsChecked}"></c:FormattedWatermarkTextBox>
                     <c:FormattedWatermarkTextBox Watermark="{Binding ElementName=EventTitleTextBox, Path=Text}" x:Name="PlannerNextWeekTitleTextBox" Grid.Column="2" Margin="7,5" Grid.Row="8" IsEnabled="{Binding ElementName=PlannerNextWeekButton, Path=IsChecked}"></c:FormattedWatermarkTextBox>
 
-                    <ComboBox x:Name="PlannerDay1LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="1" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay1Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}"/>
-                    <ComboBox x:Name="PlannerDay2LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="2" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay2Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}"/>
-                    <ComboBox x:Name="PlannerDay3LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="3" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay3Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}"/>
-                    <ComboBox x:Name="PlannerDay4LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="4" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay4Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}"/>
-                    <ComboBox x:Name="PlannerDay5LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="5" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay5Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}"/>
-                    <ComboBox x:Name="PlannerDay6LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="6" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay6Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}"/>
-                    <ComboBox x:Name="PlannerDay7LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="7" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay7Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}"/>
-                    <ComboBox x:Name="PlannerNextWeekLegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="8" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerNextWeekButton, Path=IsChecked}"/>
+                    <ComboBox x:Name="PlannerDay1LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="1" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay1Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}" ItemsSource="{Binding LegendItemDisplaysWithDefault}" SelectedIndex="0" SelectedValuePath="Tag"/>
+                    <ComboBox x:Name="PlannerDay2LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="2" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay2Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}" ItemsSource="{Binding LegendItemDisplaysWithDefault}" SelectedIndex="0" SelectedValuePath="Tag"/>
+                    <ComboBox x:Name="PlannerDay3LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="3" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay3Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}" ItemsSource="{Binding LegendItemDisplaysWithDefault}" SelectedIndex="0" SelectedValuePath="Tag"/>
+                    <ComboBox x:Name="PlannerDay4LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="4" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay4Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}" ItemsSource="{Binding LegendItemDisplaysWithDefault}" SelectedIndex="0" SelectedValuePath="Tag"/>
+                    <ComboBox x:Name="PlannerDay5LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="5" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay5Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}" ItemsSource="{Binding LegendItemDisplaysWithDefault}" SelectedIndex="0" SelectedValuePath="Tag"/>
+                    <ComboBox x:Name="PlannerDay6LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="6" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay6Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}" ItemsSource="{Binding LegendItemDisplaysWithDefault}" SelectedIndex="0" SelectedValuePath="Tag"/>
+                    <ComboBox x:Name="PlannerDay7LegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="7" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerDay7Button, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}" ItemsSource="{Binding LegendItemDisplaysWithDefault}" SelectedIndex="0" SelectedValuePath="Tag"/>
+                    <ComboBox x:Name="PlannerNextWeekLegendItem" Grid.Column="4" Margin="5,5,5,5" Grid.Row="8" VerticalContentAlignment="Center" IsEnabled="{Binding ElementName=PlannerNextWeekButton, Path=IsChecked}" Foreground="{Binding RelativeSource={RelativeSource Self}, Path=SelectedItem.Foreground}" ItemsSource="{Binding LegendItemDisplaysWithDefault}" SelectedIndex="0" SelectedValuePath="Tag"/>
 
                 </Grid>
             </TabItem>
