--- a/WeeklyPlanner/EventDialog.xaml
+++ b/WeeklyPlanner/EventDialog.xaml
@@ -43,6 +43,8 @@
                     <Rectangle Fill="Gray" Height="1" Margin="0,2,0,0" Grid.Row="1" Grid.ColumnSpan="4" VerticalAlignment="Top"/>
 
                     <Label Content="Subtasks" Grid.Row="1" HorizontalAlignment="Left" Margin="4,10,0,0" FontWeight="Bold" Width="103" Height="26" VerticalAlignment="Top"/>
+                    <xwtk:IntegerUpDown x:Name="SubtaskNumberCounter" Grid.Column="2" Margin="5,10,71,0" Grid.Row="1" Value="1" Minimum="1" Maximum="10" Height="20" VerticalAlignment="Top" IsEnabled="{Binding ElementName=ChecklistEntryNoneButton, Path=IsChecked, Converter={StaticResource InverseBooleanConverter}}"/>
+                    <Button Click="AddNumberSubtasksButton_Click" Grid.Column="2" Margin="50,10,5,0" Grid.Row="1" Content="+ Numbers" FontSize="10" Height="20" VerticalAlignment="Top" IsEnabled="{Binding ElementName=ChecklistEntryNoneButton, Path=IsChecked, Converter={StaticResource InverseBooleanConverter}}"/>
                     <Button Content="Add Subtask" Grid.Row="1" Grid.Column="3" Margin="0,10,6,0" FontSize="10" Click="AddSubtask_Click" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Top" IsEnabled="{Binding ElementName=ChecklistEntryNoneButton, Path=IsChecked, Converter={StaticResource InverseBooleanConverter}}"/>
                     <ListBox x:Name="SubtaskListBox" Grid.ColumnSpan="4" Margin="4,35,6,10" Grid.Row="1" dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True" KeyDown="SubtaskListBox_KeyDown" IsEnabled="{Binding ElementName=ChecklistEntryNoneButton, Path=IsChecked, Converter={StaticResource InverseBooleanConverter}}">
                     </ListBox>
