--- a/WeeklyPlanner/MainWindow.xaml
+++ b/WeeklyPlanner/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:dd="urn:gong-wpf-dragdrop"
         mc:Ignorable="d"
         DataContext="{Binding RelativeSource={RelativeSource Self}}"
-        Title="MainWindow" Height="1087" Width="824">
+        Title="{Binding ElementName=TitleLabel, Path=Content}" Height="1087" Width="824">
     <Grid x:Name="MainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="2*"/>
